--- a/vectorPainter/vectorPainter/vectorPainter.csproj
+++ b/vectorPainter/vectorPainter/vectorPainter.csproj
@@ -50,6 +50,7 @@
     <Compile Include="Figures\Ellipse\EllipseCreator.cs" />
     <Compile Include="Figures\Figure.cs" />
     <Compile Include="Figures\FigureCreator.cs" />
+    <Compile Include="Figures\FiguresDictionarySingleton.cs" />
     <Compile Include="Figures\Rectangle\RectangleCreator.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
