--- a/vectorPainter/vectorPainter/vectorPainter.csproj
+++ b/vectorPainter/vectorPainter/vectorPainter.csproj
@@ -51,6 +51,7 @@
     <Compile Include="Figures\Figure.cs" />
     <Compile Include="Figures\FigureCreator.cs" />
     <Compile Include="Figures\FiguresDictionarySingleton.cs" />
+    <Compile Include="Figures\ProtoCreator.cs" />
     <Compile Include="Figures\Rectangle\RectangleCreator.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
